<resources>
    <string name="app_name">paises</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo_registro">Fallo el registro</string>
    <string name="msg_fallo_login">Error autenticando usuario</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pais">Paises</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del pais</string>
    <string name="msg_correo">Correo (abc@abc.com)</string>
    <string name="msg_telefono">Teléfono (9999-99999)</string>
    <string name="msg_web">Sitio Web</string>
    <string name="bt_agregar">Agregar Pais</string>
    <string name="bt_actualizar">Actualizar Pais</string>
    <string name="delete">Elimina Pais</string>
    <string name="paisAdded">Pais agregado</string>
    <string name="noData">Faltan datos</string>

    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_map_view">Ver pais en mapa</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="msg_datos">Faltan datos</string>
    <string name="error">Error</string>
    <string name="seguroBorrar">¿Está segur de eliminar?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>


</resources>