<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_pais">

    <fragment
        android:id="@+id/nav_pais"
        android:name="com.paises.ui.pais.PaisFragment"
        android:label="@string/menu_pais"
        tools:layout="@layout/fragment_pais" >
        <action
            android:id="@+id/action_nav_pais_to_addPaisFragment"
            app:destination="@id/addPaisFragment" />
        <action
            android:id="@+id/action_nav_pais_to_updatePaisFragment"
            app:destination="@id/updatePaisFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.paises.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.paises.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addPaisFragment"
        android:name="com.paises.ui.pais.AddPaisFragment"
        android:label="@string/bt_agregar"
        tools:layout="@layout/fragment_add_pais" >
        <action
            android:id="@+id/action_addPaisFragment_to_nav_pais"
            app:destination="@id/nav_pais" />
    </fragment>
    <fragment
        android:id="@+id/updatePaisFragment"
        android:name="com.paises.ui.pais.UpdatePaisFragment"
        android:label="@string/bt_actualizar"
        tools:layout="@layout/fragment_update_pais" >
        <action
            android:id="@+id/action_updatePaisFragment_to_nav_pais"
            app:destination="@id/nav_pais" />
        <argument
            android:name="pais"
            app:argType="com.paises.model.Pais" />
    </fragment>
</navigation>